--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--=============== FAVICON ===============-->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/perfil1.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/perfil1.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/perfil1.png">
-    <link rel="manifest" href="assets/favicons/site.webmanifest">
-    <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="assets/favicons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
     <meta name="theme-color" content="#a789d4">
 
     <!--=============== BOXICONS ===============-->
@@ -25,7 +20,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title> Hailee's Portfolio </title>
+    <title> Jasir's Portfolio </title>
 </head>
 
 <body>
