--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                     <div class="testimonial__card swiper-slide">
                         <img src="assets/img/testimonial1.png" alt="" class="testimonial__img">
 
-                        <h3 class="testimonial__name">Jhon Doe</h3>
+                        <h3 class="testimonial__name">Vyshnav Gr</h3>
                         <p class="testimonial__description">
                             A really good job, all aspects of the project were done well.
                             Very creative and thoughtful. I was very impressed and would recommend this to anyone.
