--- a/index.html
+++ b/index.html
@@ -478,57 +478,56 @@
             <div class="work__filters">
                 <span class="work__item active-work" data-filter='all'>All</span>
                 <span class=" work__item" data-filter='.web'>Web</span>
-                <span class=" work__item" data-filter='.movil'>Movil</span>
                 <span class=" work__item" data-filter='.design'>Design</span>
             </div>
 
             <div class="work__container container grid">
                 <div class="work__card mix web">
-                    <img src="assets/img/work1.jpg" alt="" class="work__img">
+                    <img src="assets/img/work1.png" alt="" class="work__img">
 
-                    <h3 class="work__title">Web Design</h3>
+                    <h3 class="work__title">High Hydration</h3>
 
-                    <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow work__icon'></i>
-                    </a>
-                </div>
-
-                <div class="work__card mix movil">
-                    <img src="assets/img/work2.jpg" alt="" class="work__img">
-
-                    <h3 class="work__title">App Movil</h3>
-
-                    <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow work__icon'></i>
-                    </a>
-                </div>
-
-                <div class="work__card mix design">
-                    <img src="assets/img/work3.jpg" alt="" class="work__img">
-
-                    <h3 class="work__title">Brand Design</h3>
-
-                    <a href="#" class="work__button">
+                    <a href="https://highhydration-web-beta.vercel.app/" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix web">
-                    <img src="assets/img/work4.jpg" alt="" class="work__img">
+                    <img src="assets/img/work2.png" alt="" class="work__img">
 
-                    <h3 class="work__title">Web Design</h3>
+                    <h3 class="work__title">Echosphere</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="https://echosphere-blue.vercel.app/" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
-                <div class="work__card mix movil">
-                    <img src="assets/img/work5.jpg" alt="" class="work__img">
+                <div class="work__card mix design">
+                    <img src="assets/img/work4.png" alt="" class="work__img">
 
-                    <h3 class="work__title">App Movil</h3>
+                    <h3 class="work__title">Design</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="https://www.figma.com/design/DexgFdTkboZNCGRoRmFJZ3/Untitled?node-id=152-233&t=7n5FBigShBMewz9U-1" class="work__button">
+                        Demo <i class='bx bx-right-arrow work__icon'></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix web">
+                    <img src="assets/img/work3.png" alt="" class="work__img">
+
+                    <h3 class="work__title">Pet Foode</h3>
+
+                    <a href="https://e-commerce-pet-foode.vercel.app/" class="work__button">
+                        Demo <i class='bx bx-right-arrow work__icon'></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix web">
+                    <img src="assets/img/work5.png" alt="" class="work__img">
+
+                    <h3 class="work__title">Portfolioo</h3>
+
+                    <a href="https://portfolioo-iota-silk.vercel.app/" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
@@ -537,16 +536,16 @@
         </section>
 
         <!--=============== TESTIMONIALS ===============-->
-        <section class="testimonial section">
+        <!-- <section class="testimonial section">
             <span class="section__subtitle">My clients say</span>
             <h2 class="section__title">Testimonials</h2>
 
             <div class="testimonial__container container swiper">
                 <div class="swiper-wrapper">
                     <div class="testimonial__card swiper-slide">
-                        <img src="assets/img/testimonial1.png" alt="" class="testimonial__img">
+                        <img src="https://avatars.githubusercontent.com/u/144648806?v=4" alt="" class="testimonial__img">
 
-                        <h3 class="testimonial__name">Vyshnav Gr</h3>
+                        <h3 class="testimonial__name">JahfarEv</h3>
                         <p class="testimonial__description">
                             A really good job, all aspects of the project were done well.
                             Very creative and thoughtful. I was very impressed and would recommend this to anyone.
@@ -554,9 +553,9 @@
                     </div>
 
                     <div class="testimonial__card swiper-slide">
-                        <img src="assets/img/testimonial2.png" alt="" class="testimonial__img">
+                        <img src="https://avatars.githubusercontent.com/u/144764457?v=4" alt="" class="testimonial__img">
 
-                        <h3 class="testimonial__name">Ada Hill</h3>
+                        <h3 class="testimonial__name">Ameen M</h3>
                         <p class="testimonial__description">
                             A really good job, all aspects of the project were done well.
                             Very creative and thoughtful. I was very impressed and would recommend this to anyone.
@@ -564,9 +563,9 @@
                     </div>
 
                     <div class="testimonial__card swiper-slide">
-                        <img src="assets/img/testimonial3.png" alt="" class="testimonial__img">
+                        <img src="https://avatars.githubusercontent.com/u/141131567?v=4" alt="" class="testimonial__img">
 
-                        <h3 class="testimonial__name">Jessica Park</h3>
+                        <h3 class="testimonial__name">Ajsal</h3>
                         <p class="testimonial__description">
                             A really good job, all aspects of the project were done well.
                             Very creative and thoughtful. I was very impressed and would recommend this to anyone.
@@ -576,7 +575,7 @@
                 <div class="swiper-pagination"></div>
             </div>
 
-        </section>
+        </section> -->
 
         <!--=============== CONTACT ===============-->
         <section class="contact section" id="contact">
@@ -593,7 +592,7 @@
                             <h3 class="contact__card-title">Email</h3>
                             <span class="contact__card-data">jasirjas9605@gmail.com</span>
 
-                            <a href="jasirjas9605@domain.com" target="_blank" class="contact__button">
+                            <a href="mailto:jasirjas9605@gmail.com" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
                             </a>
                         </div>
@@ -610,11 +609,11 @@
                         </div>
 
                         <div class="contact__card">
-                            <i class='bx bxl-twitter contact__card-icon'></i>
-                            <h3 class="contact__card-title">Twitter</h3>
-                            <span class="contact__card-data">usertw</span>
+                            <i class='bx bxl-instagram contact__card-icon'></i>
+                            <h3 class="contact__card-title">Instagram</h3>
+                            <span class="contact__card-data">mohd__jasir___</span>
 
-                            <a href="https://twitter.com/usertw" target="_blank" class="contact__button">
+                            <a href="https://instagram.com/mohd__jasir___" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
                             </a>
                         </div>
@@ -627,22 +626,22 @@
                     <form action="" class="contact__form">
                         <div class="contact__form-div">
                             <label for="" class="contact__form-tag">Name</label>
-                            <input type="text" placeholder="Enter name" class="contact__form-input">
+                            <input type="text" placeholder="Enter name" id="fullname" class="contact__form-input">
                         </div>
 
                         <div class="contact__form-div">
                             <label for="" class="contact__form-tag">Mail</label>
-                            <input type="text" placeholder="Enter email" class="contact__form-input">
+                            <input  id="email" type="text" placeholder="Enter email" class="contact__form-input">
                         </div>
 
                         <div class="contact__form-div contact__form-area">
                             <label for="" class="contact__form-tag">Message</label>
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Write your Message"
+                            <textarea name="" id="msg" cols="30" rows="10" placeholder="Write your Message"
                                 class="contact__form-input "></textarea>
                         </div>
 
 
-                        <button class="button">
+                        <button class="button" onclick="sendMail()">
                             Send Message
                         </button>
                     </form>
@@ -678,22 +677,22 @@
 
             <ul class="footer__social">
                 <li class="footer__social-item">
-                    <a href="#" target="_blank" class="footer__social-link">
+                    <a href="https://www.facebook.com/jasir.jaz.56?mibextid=LQQJ4d" target="_blank" class="footer__social-link">
                         <i class='bx bxl-facebook footer__social-icon'></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a href="#" target="_blank" class="footer__social-link">
-                        <i class='bx bxl-twitter footer__social-icon'></i>
+                    <a href="https://github.com/JasirV" target="_blank" class="footer__social-link">
+                        <i class='bx bxl-github'></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a href="#" target="_blank" class="footer__social-link">
+                    <a href="https://www.linkedin.com/in/jasir-kpt-6269a4294/" target="_blank" class="footer__social-link">
                         <i class='bx bxl-linkedin footer__social-icon'></i>
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a href="#" target="_blank" class="footer__social-link">
+                    <a href="https://www.instagram.com/mohd__jasir_?igsh=MTExYnB3eGxweHlhNw%3D%3D&utm_source=qr" target="_blank" class="footer__social-link">
                         <i class='bx bxl-instagram footer__social-icon'></i>
                     </a>
                 </li>
@@ -718,6 +717,7 @@
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
+    <script src="index.js" ></script>
 </body>
 
 </html>
